<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.popularmovies.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/movie_poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_text"
                android:textSize="20dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_horizontal" />
             <TextView
                 android:id="@+id/movie_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/default_string_text"
                 android:textSize="20dp"
                 android:layout_gravity="center_horizontal"
                 android:textStyle="bold"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_date_of_release_text"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_string_text"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_average_rating_text"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_gravity="center_horizontal" />
         <TextView
             android:id="@+id/movie_vote_average"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/default_string_text"
             android:textSize="20dp"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview_text"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_gravity="center_horizontal" />
         <TextView
             android:id="@+id/movie_plot_synopsis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/default_string_text"
             android:textSize="20dp"
             android:textStyle="italic"/>
    </LinearLayout>

     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed" />

     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="500px" />

 </LinearLayout>


</android.support.v4.widget.NestedScrollView>
